--- a/webclient/public/stylesheets/admin.css
+++ b/webclient/public/stylesheets/admin.css
@@ -191,6 +191,18 @@ ul.nav li.last {background:none;}
 	margin:0 0 4px 0;
 	}
 /* text page header */
+.top-bar notice {
+	font:15px/16px verdana,sans-serif;
+	color:#73ba25;
+	margin:0 0 4px 0;
+	}
+
+.top-bar error {
+	font:15px/16px verdana,sans-serif;
+	color:#ff7e00;
+	margin:0 0 4px 0;
+	}
+
 .top-bar h1 {
 	font:20px/21px verdana,sans-serif;
 	color:#43729F;
