--- a/webclient/app/views/users/edit.html.erb
+++ b/webclient/app/views/users/edit.html.erb
@@ -43,6 +43,6 @@
 	<td class="last"><%= f.text_field :password, :disabled=>@writePermission %></td>
     </tr>
     </table>
-    <p><%= f.submit "Update", :disabled=>@writePermission %><%= link_to 'Back', users_path, :class => "button"%></p>
+    <p><%= f.submit "Update", :disabled=>@writePermission, :onclick=>"Element.show('progress')" %><%= link_to 'Back', users_path, :onclick=>"Element.show('progress')", :class => "button"%></p>
   </div>
 <% end %>
