--- a/webclient/app/views/users/exportssh.html.erb
+++ b/webclient/app/views/users/exportssh.html.erb
@@ -1,14 +1,5 @@
 <h1>Export SSH-Key</h1>
 <br>
-<% if @user.error_id != 0 %>
-<p>
-   Error ID: <%= @user.error_id -%>
-   Error: <%= @user.error_string -%>
-</p>
-<% end %>
-
-<% if @user.error_id == 0 or @user.error_id != 1 %>
-
 <% form_for(@user) do |f| %>
   <%= f.error_messages %>
 
@@ -32,7 +23,6 @@
 	<td class="last"><%= f.text_field :sshkey, :disabled=>@writePermission %></td>
     </tr>
     </table>
-    <p><%= f.submit "Export SSH-Key", :disabled=>@writePermission %><%= link_to 'Back', users_path, :class => "button" %></p>
+    <p><%= f.submit "Export SSH-Key", :onclick=>"Element.show('progress')", :disabled=>@writePermission %><%= link_to 'Back', users_path, :onclick=>"Element.show('progress')", :class => "button" %></p>
   </div>
-<% end %>
 <% end %>
