--- a/webclient/app/views/users/index.html.erb
+++ b/webclient/app/views/users/index.html.erb
@@ -23,8 +23,8 @@
          <% else %>
            <tr>
               <td><strong><%=h user.loginName %></strong></td>
-              <td><%= link_to image_tag("/images/edit-icon.gif", :alt =>  "edit"), edit_user_path(user.loginName) %></td>
-              <td><%= link_to image_tag("/images/key_add.png", :alt =>  "key"), exportssh_user_path(user.loginName) %></td>
+              <td><%= link_to image_tag("/images/edit-icon.gif", :alt =>  "edit"), edit_user_path(user.loginName), :onclick=>"Element.show('progress')" %></td>
+              <td><%= link_to image_tag("/images/key_add.png", :alt =>  "key"), exportssh_user_path(user.loginName), :onclick=>"Element.show('progress')" %></td>
               <% if @deletePermission == nil %>
                  <td class="last"><%= link_to image_tag("/images/delete.png", :alt =>  "delete"), 
                               user_path(user.loginName), :confirm => 'Are you sure?', :method => :delete %></td>
@@ -35,7 +35,7 @@
    </table>
    <% if @newPermission == nil %>
       <div class="select">
-          <%= link_to "<strong>[New User]</strong>", new_user_path -%><p/>
+          <%= link_to "<strong>[New User]</strong>", new_user_path, :onclick=>"Element.show('progress')" -%><p/>
       </div>
    <% end %>
 </div>
