taking rails conform variable names

--- a/webclient/app/views/users/edit.html.erb
+++ b/webclient/app/views/users/edit.html.erb
@@ -12,7 +12,7 @@
     </tr>
     <tr>
 	<td class="first" width="120"><strong>Full Name</strong></td>
-	<td class="last"><%= f.text_field :fullName, :disabled=>@writePermission %></td>
+	<td class="last"><%= f.text_field :full_name, :disabled=>@writePermission %></td>
     </tr>
     <tr class="bg">
 	<td class="first"><strong>Groups</strong></td>
@@ -20,19 +20,19 @@
     </tr>
     <tr>
 	<td class="first"><strong>Default Group</strong></td>
-	<td class="last"><%= f.text_field :defaultGroup, :disabled=>@writePermission %></td>
+	<td class="last"><%= f.text_field :default_group, :disabled=>@writePermission %></td>
     </tr>
     <tr class="bg">
 	<td class="first"><strong>Home Directory</strong></td>
-	<td class="last"><%= f.text_field :homeDirectory, :disabled=>@writePermission %></td>
+	<td class="last"><%= f.text_field :home_directory, :disabled=>@writePermission %></td>
     </tr>
     <tr>
 	<td class="first"><strong>Login Shell </strong></td>
-	<td class="last"><%= f.text_field :loginShell, :disabled=>@writePermission %></td>
+	<td class="last"><%= f.text_field :login_shell, :disabled=>@writePermission %></td>
     </tr>
     <tr class="bg">
 	<td class="first"><strong>Login Name </strong></td>
-	<td class="last"><%= f.text_field :loginName, :disabled=>@writePermission %></td>
+	<td class="last"><%= f.text_field :login_name, :disabled=>@writePermission %></td>
     </tr>
     <tr>
 	<td class="first"><strong>UID</strong></td>
