--- a/webclient/app/views/users/exportssh.html.erb
+++ b/webclient/app/views/users/exportssh.html.erb
@@ -12,11 +12,11 @@
     </tr>
     <tr>
 	<td class="first" width="120"><strong>Login Name</strong></td>
-	<td class="last"><%=h @user.loginName %></td>
+	<td class="last"><%=h @user.login_name %></td>
     </tr>
     <tr class="bg">
 	<td class="first"><strong>Home Directory</strong></td>
-	<td class="last"><%=h @user.homeDirectory %></td>
+	<td class="last"><%=h @user.home_directory %></td>
     </tr>
     <tr>
 	<td class="first"><strong>SHH Key</strong></td>
