--- a/webclient/app/views/users/new.html.erb
+++ b/webclient/app/views/users/new.html.erb
@@ -12,7 +12,7 @@
     </tr>
     <tr>
 	<td class="first" width="120"><strong>Full Name</strong></td>
-	<td class="last"><%= f.text_field :fullName %></td>
+	<td class="last"><%= f.text_field :full_name %></td>
     </tr>
     <tr class="bg">
 	<td class="first"><strong>Groups</strong></td>
@@ -20,11 +20,11 @@
     </tr>
     <tr>
 	<td class="first"><strong>Default Group</strong></td>
-	<td class="last"><%= f.text_field :defaultGroup %></td>
+	<td class="last"><%= f.text_field :default_group %></td>
     </tr>
     <tr class="bg">
 	<td class="first"><strong>Home Directory</strong></td>
-	<td class="last"><%= f.text_field :homeDirectory %></td>
+	<td class="last"><%= f.text_field :home_directory %></td>
     </tr>
     <tr>
 	<td class="first"><strong>do NOT create home directory</strong></td>
@@ -32,11 +32,11 @@
     </tr>
     <tr class="bg">
 	<td class="first"><strong>Login Shell </strong></td>
-	<td class="last"><%= f.text_field :loginShell %></td>
+	<td class="last"><%= f.text_field :login_shell %></td>
     </tr>
     <tr>
 	<td class="first"><strong>Login Name </strong></td>
-	<td class="last"><%= f.text_field :loginName %></td>
+	<td class="last"><%= f.text_field :login_name %></td>
     </tr>
     <tr class="bg">
 	<td class="first"><strong>UID</strong></td>
