--- a/webclient/app/views/users/index.html.erb
+++ b/webclient/app/views/users/index.html.erb
@@ -22,12 +22,12 @@
            </tr>
          <% else %>
            <tr>
-              <td><strong><%=h user.loginName %></strong></td>
-              <td><%= link_to image_tag("/images/edit-icon.gif", :alt =>  "edit"), edit_user_path(user.loginName), :onclick=>"Element.show('progress')" %></td>
-              <td><%= link_to image_tag("/images/key_add.png", :alt =>  "key"), exportssh_user_path(user.loginName), :onclick=>"Element.show('progress')" %></td>
+              <td><strong><%=h user.login_name %></strong></td>
+              <td><%= link_to image_tag("/images/edit-icon.gif", :alt =>  "edit"), edit_user_path(user.login_name), :onclick=>"Element.show('progress')" %></td>
+              <td><%= link_to image_tag("/images/key_add.png", :alt =>  "key"), exportssh_user_path(user.login_name), :onclick=>"Element.show('progress')" %></td>
               <% if @deletePermission == nil %>
                  <td class="last"><%= link_to image_tag("/images/delete.png", :alt =>  "delete"), 
-                              user_path(user.loginName), :confirm => 'Are you sure?', :method => :delete %></td>
+                              user_path(user.login_name), :confirm => 'Are you sure?', :method => :delete %></td>
               <% end %>
            </tr>
          <% end %>
