--- a/webclient/app/views/services/_result.rhtml
+++ b/webclient/app/views/services/_result.rhtml
@@ -8,11 +8,11 @@
       </tr>
       <tr>
           <td class="first" width="120"><strong>Result</strong></td>
-          <td class="last"><%=h @errorString %></td>
+          <td class="last"><%=h @error_string %></td>
       </tr>
       <tr class="bg">
           <td class="first"><strong>Description</strong></td>
-          <td class="last"><%=h @resultString %></td>
+          <td class="last"><%=h @result_string %></td>
       </tr>
       </table>
       <p><a href="services" class="button">Back</a></p>
