--- a/webclient/app/views/users/edit.html.erb
+++ b/webclient/app/views/users/edit.html.erb
@@ -12,37 +12,37 @@
     </tr>
     <tr>
 	<td class="first" width="120"><strong>Full Name</strong></td>
-	<td class="last"><%= f.text_field :full_name, :disabled=>@writePermission %></td>
+	<td class="last"><%= f.text_field :full_name, :disabled=>@write_permission %></td>
     </tr>
     <tr class="bg">
 	<td class="first"><strong>Groups</strong></td>
-	<td class="last"><%= f.text_field :groups, :disabled=>@writePermission %></td>
+	<td class="last"><%= f.text_field :groups, :disabled=>@write_permission %></td>
     </tr>
     <tr>
 	<td class="first"><strong>Default Group</strong></td>
-	<td class="last"><%= f.text_field :default_group, :disabled=>@writePermission %></td>
+	<td class="last"><%= f.text_field :default_group, :disabled=>@write_permission %></td>
     </tr>
     <tr class="bg">
 	<td class="first"><strong>Home Directory</strong></td>
-	<td class="last"><%= f.text_field :home_directory, :disabled=>@writePermission %></td>
+	<td class="last"><%= f.text_field :home_directory, :disabled=>@write_permission %></td>
     </tr>
     <tr>
 	<td class="first"><strong>Login Shell </strong></td>
-	<td class="last"><%= f.text_field :login_shell, :disabled=>@writePermission %></td>
+	<td class="last"><%= f.text_field :login_shell, :disabled=>@write_permission %></td>
     </tr>
     <tr class="bg">
 	<td class="first"><strong>Login Name </strong></td>
-	<td class="last"><%= f.text_field :login_name, :disabled=>@writePermission %></td>
+	<td class="last"><%= f.text_field :login_name, :disabled=>@write_permission %></td>
     </tr>
     <tr>
 	<td class="first"><strong>UID</strong></td>
-	<td class="last"><%= f.text_field :uid, :disabled=>@writePermission %></td>
+	<td class="last"><%= f.text_field :uid, :disabled=>@write_permission %></td>
     </tr>
     <tr class="bg">
 	<td class="first"><strong>Password</strong></td>
-	<td class="last"><%= f.text_field :password, :disabled=>@writePermission %></td>
+	<td class="last"><%= f.text_field :password, :disabled=>@write_permission %></td>
     </tr>
     </table>
-    <p><%= f.submit "Update", :disabled=>@writePermission, :onclick=>"Element.show('progress')" %><%= link_to 'Back', users_path, :onclick=>"Element.show('progress')", :class => "button"%></p>
+    <p><%= f.submit "Update", :disabled=>@write_permission, :onclick=>"Element.show('progress')" %><%= link_to 'Back', users_path, :onclick=>"Element.show('progress')", :class => "button"%></p>
   </div>
 <% end %>
