--- a/webclient/app/views/users/index.html.erb
+++ b/webclient/app/views/users/index.html.erb
@@ -8,7 +8,7 @@
       <tr>
 	<th class="first" width=150>Login</th>
 	<th width=8%>Edit</th>
-        <% if @deletePermission == nil %>
+        <% if @delete_permission == nil %>
            <th width=8%>SSH-Key</th>
            <th class="last" width=8%>Delete</th>
         <% else %>
@@ -25,7 +25,7 @@
               <td><strong><%=h user.login_name %></strong></td>
               <td><%= link_to image_tag("/images/edit-icon.gif", :alt =>  "edit"), edit_user_path(user.login_name), :onclick=>"Element.show('progress')" %></td>
               <td><%= link_to image_tag("/images/key_add.png", :alt =>  "key"), exportssh_user_path(user.login_name), :onclick=>"Element.show('progress')" %></td>
-              <% if @deletePermission == nil %>
+              <% if @delete_permission == nil %>
                  <td class="last"><%= link_to image_tag("/images/delete.png", :alt =>  "delete"), 
                               user_path(user.login_name), :confirm => 'Are you sure?', :method => :delete %></td>
               <% end %>
@@ -33,7 +33,7 @@
          <% end %>
       <% end %>
    </table>
-   <% if @newPermission == nil %>
+   <% if @new_permission == nil %>
       <div class="select">
           <%= link_to "<strong>[New User]</strong>", new_user_path, :onclick=>"Element.show('progress')" -%><p/>
       </div>
