drop tables config_ntps, links, patch_updates, permissions, system_times, users

--- a/webclient/app/views/users/edit.html.erb
+++ b/webclient/app/views/users/edit.html.erb
@@ -16,7 +16,7 @@
     </tr>
     <tr class="bg">
 	<td class="first"><strong>Groups</strong></td>
-	<td class="last"><%= f.text_field :groups, :disabled=>@write_permission %></td>
+	<td class="last"><%= f.text_field :grp_string, :disabled=>@write_permission %></td>
     </tr>
     <tr>
 	<td class="first"><strong>Default Group</strong></td>
