--- a/webclient/app/views/users/new.html.erb
+++ b/webclient/app/views/users/new.html.erb
@@ -16,7 +16,7 @@
     </tr>
     <tr class="bg">
 	<td class="first"><strong>Groups</strong></td>
-	<td class="last"><%= f.text_field :groups %></td>
+	<td class="last"><%= f.text_field :grp_string %></td>
     </tr>
     <tr>
 	<td class="first"><strong>Default Group</strong></td>
