--- a/webclient/app/views/users/new.html.erb
+++ b/webclient/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New User</h1>
 <br>
-<% form_for(@user) do |f| %>
+<% form_for :user, :url => { :action => "create"}  do |f| %>
   <%= f.error_messages %>
 
   <div class="table">
