--- a/webclient/app/views/language/index.rhtml
+++ b/webclient/app/views/language/index.rhtml
@@ -1,4 +1,4 @@
-<h1>Language</h1>
+<h1><%=_("Language")%></h1>
 <br>
 
 <% form_tag '/language/commit_language' do %>
@@ -7,10 +7,10 @@
     <img src="/images/bg-th-right.gif" width="7" height="7" alt="" class="right" />
     <table class="listing form" cellpadding="0" cellspacing="0">
        <tr>
- 	  <th class="full" colspan="2">Settings</th>
+ 	  <th class="full" colspan="2"><%=_("Settings")%></th>
        </tr>
        <tr>
-	  <td class="first" width="120"><strong>First Language</strong></td>
+	  <td class="first" width="120"><strong><%=_("First Language")%></strong></td>
   	  <td class="last"><%= select_tag :first_language, options_for_select(@valid, @language.first_language), :disabled=>@write_permission %></td>
        </tr>
        <% first = true %>
@@ -18,7 +18,7 @@
           <tr class="bg">
              <% if first==true %>
                 <% first=false %>
-                <td class="first"><strong>Second Languages</strong></td>
+                <td class="first"><strong><%=_("Second Languages")%></strong></td>
              <% else %>
                 <td class="first"><strong> </strong></td>
              <% end %>
@@ -26,7 +26,7 @@
           </tr>
        <% end %>
     </table>
-    <p><%= submit_tag "Save", :confirm => 'This operation can take a while.', :disabled=>@write_permission -%></p>
+    <p><%= submit_tag _("Save"), :confirm => _('This operation can take a while.'), :disabled=>@write_permission -%></p>
   </div>
 <% end %>
 
