--- a/webclient/app/views/permissions/index.rhtml
+++ b/webclient/app/views/permissions/index.rhtml
@@ -10,12 +10,12 @@
     <%= stylesheet_link_tag  'yui/treeview'%>
 
  </head>
-<h1>User Permissions</h1>
+<h1><%=_("User Permissions")%></h1>
 <br>
 <% form_tag '/permissions/search' do %>
-  <p><label for="user">User</label>
+  <p><label for="user"><%=_("User")%></label>
   <input type="text" name="user" size=25 value=<%= "#{@current_user}" %> >
-  <%= submit_tag "Search", :onclick=>"Element.show('progress')"%>
+  <%= submit_tag _("Search"), :onclick=>"Element.show('progress')"%>
 <% end %>
 <br>
 <br>
@@ -26,8 +26,8 @@
    <col>
    </colgroup>
    <tr>
-   <th>Revoked Permissions</th>
-   <th>Granted Permissions</th>
+   <th><%=_("Revoked Permissions")%></th>
+   <th><%=_("Granted Permissions")%></th>
    </tr>
    <tr>
    <td valign="top">
