--- a/webclient/app/views/services/_result.rhtml
+++ b/webclient/app/views/services/_result.rhtml
@@ -4,17 +4,17 @@
       <img src="images/bg-th-right.gif" width="7" height="7" alt="" class="right" />
       <table class="listing form" cellpadding="0" cellspacing="0">
       <tr>
-          <th class="full" colspan="2">Service Call Result</th>
+          <th class="full" colspan="2"><%=_("Service Call Result")%></th>
       </tr>
       <tr>
-          <td class="first" width="120"><strong>Result</strong></td>
+          <td class="first" width="120"><strong><%=_("Result")%></strong></td>
           <td class="last"><%=h @error_string %></td>
       </tr>
       <tr class="bg">
-          <td class="first"><strong>Description</strong></td>
+          <td class="first"><strong><%=_("Description")%></strong></td>
           <td class="last"><%=h @result_string %></td>
       </tr>
       </table>
-      <p><a href="services" class="button">Back</a></p>
+      <p><a href="services" class="button"><%=_("Back")%></a></p>
    </div>
    </div>
