--- a/webclient/app/views/users/edit.html.erb
+++ b/webclient/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Edit User</h1>
+<h1><%=_("Edit User")%></h1>
 <br>
 <% form_for(@user) do |f| %>
   <%= f.error_messages %>
@@ -8,41 +8,41 @@
     <img src="/images/bg-th-right.gif" width="7" height="7" alt="" class="right" />
     <table class="listing form" cellpadding="0" cellspacing="0">
     <tr>
- 	<th class="full" colspan="2">User</th>
+ 	<th class="full" colspan="2"><%=_("User")%></th>
     </tr>
     <tr>
-	<td class="first" width="120"><strong>Full Name</strong></td>
+	<td class="first" width="120"><strong><%=_("Full Name")%></strong></td>
 	<td class="last"><%= f.text_field :full_name, :disabled=>@write_permission %></td>
     </tr>
     <tr class="bg">
-	<td class="first"><strong>Groups</strong></td>
+	<td class="first"><strong><%=_("Groups")%></strong></td>
 	<td class="last"><%= f.text_field :grp_string, :disabled=>@write_permission %></td>
     </tr>
     <tr>
-	<td class="first"><strong>Default Group</strong></td>
+	<td class="first"><strong><%=_("Default Group")%></strong></td>
 	<td class="last"><%= f.text_field :default_group, :disabled=>@write_permission %></td>
     </tr>
     <tr class="bg">
-	<td class="first"><strong>Home Directory</strong></td>
+	<td class="first"><strong><%=_("Home Directory")%></strong></td>
 	<td class="last"><%= f.text_field :home_directory, :disabled=>@write_permission %></td>
     </tr>
     <tr>
-	<td class="first"><strong>Login Shell </strong></td>
+	<td class="first"><strong><%=_("Login Shell")%></strong></td>
 	<td class="last"><%= f.text_field :login_shell, :disabled=>@write_permission %></td>
     </tr>
     <tr class="bg">
-	<td class="first"><strong>Login Name </strong></td>
+	<td class="first"><strong><%=_("Login Name")%></strong></td>
 	<td class="last"><%= f.text_field :login_name, :disabled=>@write_permission %></td>
     </tr>
     <tr>
-	<td class="first"><strong>UID</strong></td>
+	<td class="first"><strong><%=_("UID")%></strong></td>
 	<td class="last"><%= f.text_field :uid, :disabled=>@write_permission %></td>
     </tr>
     <tr class="bg">
-	<td class="first"><strong>Password</strong></td>
+	<td class="first"><strong><%=_("Password")%></strong></td>
 	<td class="last"><%= f.text_field :password, :disabled=>@write_permission %></td>
     </tr>
     </table>
-    <p><%= f.submit "Update", :disabled=>@write_permission, :onclick=>"Element.show('progress')" %><%= link_to 'Back', users_path, :onclick=>"Element.show('progress')", :class => "button"%></p>
+    <p><%= f.submit _("Update"), :disabled=>@write_permission, :onclick=>"Element.show('progress')" %><%= link_to _('Back'), users_path, :onclick=>"Element.show('progress')", :class => "button"%></p>
   </div>
 <% end %>
