--- a/webclient/app/views/users/new.html.erb
+++ b/webclient/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New User</h1>
+<h1><%=_("New User")%></h1>
 <br>
 <% form_for :user, :url => { :action => "create"}  do |f| %>
   <%= f.error_messages %>
@@ -11,42 +11,42 @@
  	<th class="full" colspan="2">User</th>
     </tr>
     <tr>
-	<td class="first" width="120"><strong>Full Name</strong></td>
+	<td class="first" width="120"><strong><%=_("Full Name")%></strong></td>
 	<td class="last"><%= f.text_field :full_name %></td>
     </tr>
     <tr class="bg">
-	<td class="first"><strong>Groups</strong></td>
+	<td class="first"><strong><%=_("Groups")%></strong></td>
 	<td class="last"><%= f.text_field :grp_string %></td>
     </tr>
     <tr>
-	<td class="first"><strong>Default Group</strong></td>
+	<td class="first"><strong><%=_("Default Group")%></strong></td>
 	<td class="last"><%= f.text_field :default_group %></td>
     </tr>
     <tr class="bg">
-	<td class="first"><strong>Home Directory</strong></td>
+	<td class="first"><strong><%=_("Home Directory")%></strong></td>
 	<td class="last"><%= f.text_field :home_directory %></td>
     </tr>
     <tr>
-	<td class="first"><strong>do NOT create home directory</strong></td>
+	<td class="first"><strong><%=_("do NOT create home directory")%></strong></td>
 	<td class="last"><input type="checkbox" name="nohome" value="true" ></td>
     </tr>
     <tr class="bg">
-	<td class="first"><strong>Login Shell </strong></td>
+	<td class="first"><strong><%=_("Login Shell")%></strong></td>
 	<td class="last"><%= f.text_field :login_shell %></td>
     </tr>
     <tr>
-	<td class="first"><strong>Login Name </strong></td>
+	<td class="first"><strong><%=_("Login Name")%></strong></td>
 	<td class="last"><%= f.text_field :login_name %></td>
     </tr>
     <tr class="bg">
-	<td class="first"><strong>UID</strong></td>
+	<td class="first"><strong><%=_("UID")%></strong></td>
 	<td class="last"><%= f.text_field :uid %></td>
     </tr>
     <tr>
-	<td class="first"><strong>Password</strong></td>
+	<td class="first"><strong><%=_("Password")%></strong></td>
 	<td class="last"><%= f.text_field :password %></td>
     </tr>
     </table>
-    <p><%= f.submit "Create", :onclick=>"Element.show('progress')" %><%= link_to 'Back', users_path, :onclick=>"Element.show('progress')", :class => "button" %></p>
+    <p><%= f.submit _("Create"), :onclick=>"Element.show('progress')" %><%= link_to _('Back'), users_path, :onclick=>"Element.show('progress')", :class => "button" %></p>
   </div>
 <% end %>
