--- a/webclient/app/views/webservices/new.html.erb
+++ b/webclient/app/views/webservices/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New YaST-Web-Service</h1>
+<h1><%=_("New YaST-Web-Service")%></h1>
 
 <% form_for(@webservice) do |f| %>
   <%= f.error_messages %>
@@ -8,18 +8,18 @@
     <img src="/images/bg-th-right.gif" width="7" height="7" alt="" class="right" />
     <table class="listing form" cellpadding="0" cellspacing="0">
     <tr>
- 	<th class="full" colspan="2">YaST-Web-Service</th>
+ 	<th class="full" colspan="2"><%=_("YaST-Web-Service")%></th>
     </tr>
     <tr>
-	<td class="first" width="120"><strong>URL</strong></td>
+	<td class="first" width="120"><strong><%=_("URL")%></strong></td>
 	<td class="last"><%= f.text_field :name %></td>
     </tr>
     <tr class="bg">
-	<td class="first"><strong>Description</strong></td>
+	<td class="first"><strong><%=_("Description")%></strong></td>
 	<td class="last"><%= f.text_field :desc %></td>
     </tr>
     </table>
-  <p><%= f.submit "Create" %><%= link_to 'Back', webservices_path, :class => "button" %></p>
+  <p><%= f.submit _("Create") %><%= link_to _('Back'), webservices_path, :class => "button" %></p>
   </div>
 <% end %>
 
